--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,21 @@ language = "en"
 multilingual = false
 src = "src"
 title = "TimeLock Cryptographic Service"
+
+[output.html]
+mathjax-support = true
+additional-css = ["njmstyle.css"]
+
+
+default-theme ="dark"
+preferred-dark-theme = "ayu"
+#no-section-label = true
+site-url ="/"
+cname = ""
+
+[output.html.print]
+enable = false
+
+[output.html.fold]
+enable = true
+level = 2
